--- a/webappWithTests/Application/aspnet-core-dotnet-core/Pages/About.cshtml
+++ b/webappWithTests/Application/aspnet-core-dotnet-core/Pages/About.cshtml
@@ -4,6 +4,6 @@
     ViewData["Title"] = "About";
 }
 <br />
-<h4>Your application description page.</h4>
+<h4>Witam na mojej stronie.</h4>
 
-<p>Use this area to provide additional information.</p>
+<p>Dużo pracy mniekosztowalo aby to uruchomic :D</p>
