--- a/webappWithTests/Application/aspnet-core-dotnet-core/Pages/Contact.cshtml
+++ b/webappWithTests/Application/aspnet-core-dotnet-core/Pages/Contact.cshtml
@@ -7,10 +7,10 @@
 <h4>Your contact page.</h4>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Capgemini<br />
+    Wrocław BGH<br />
+    <abbr title="Phone">mail:</abbr>
+    kamil.napieraj@capgemini.com
 </address>
 
 <address>
