zmiana w Contact nr.2

--- a/webappWithTests/Application/aspnet-core-dotnet-core/Pages/Contact.cshtml
+++ b/webappWithTests/Application/aspnet-core-dotnet-core/Pages/Contact.cshtml
@@ -4,18 +4,18 @@
     ViewData["Title"] = "Contact";
 }
 <br />
-<h4>Your contact page.</h4>
+<h4>Kontakt do mnie:</h4>
 
 <address>
     Capgemini<br />
     Wrocław BGH<br />
-    <abbr title="Phone">mail:</abbr>
-    kamil.napieraj@capgemini.com
+    <abbr title="Phone">tel:</abbr>
+    123-456-789
 </address>
 
 <address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong> <a href="kamil.napieraj@Capgemini.com">kamil.napieraj@Capgemini.com</a><br />
+    
 </address>
 
 
